--- a/assets/css/nivel.css
+++ b/assets/css/nivel.css
@@ -3,4 +3,37 @@
     color: rgb(255,255,255);
     font-size: 38px;
     font-family: 'Luckiest Guy', cursive; 
+    -webkit-text-fill-color:rgba(255, 255, 255, 0.9) ;
+    -webkit-text-stroke-color: #000000;
+    -webkit-text-stroke-width: 1px;
+}
+p{  
+
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+    color: #F0E2F3;
+
+}
+.menu-lateral{
+    
+    position: absolute;
+    width: 20vw;
+    height: 100vh;
+    left: 90%;
+    top: 0px;
+    background-color: #541663;
+}
+
+.fonte-menu-lateral{
+
+    font-family: Fira Sans;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 18px;
+    line-height: 24px;
+    color: #EEEEEE;
 }
