navbar pc nao aparece mais no celular - feito

--- a/assets/css/nivel.css
+++ b/assets/css/nivel.css
@@ -74,7 +74,7 @@
   width: 21px;
   height: 21px;
 }
-  ul, li, a, img, .elem-menu-lateral, .menu-desktop{
+   .menu-desktop{
     display:none;
   }
 }
