--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,9 +3,10 @@
 }
 .cont-divider{
   width: 60vw;
-  left:30vw;
+  left: 30vw;
 }
 /*mobile-first*/
+
 .fundo{
   display: block;
   overflow: hidden;
@@ -83,7 +84,7 @@ a{
     align-items: flex-start;
     padding: 32px 0px 0px;
     position: absolute;
-    width: 200px;
+    width: 700px;
     height: 120px;
     left: 27%;
     top: 400px;
@@ -116,6 +117,10 @@ a{
     align-self: center;
     flex-grow: 0;
     margin: 16px 0px;
+  }
+  .elem-btn-c{
+    height:56px;
+    width: 72px;
   }
 /*versão tablet */
  
@@ -153,7 +158,6 @@ a{
     flex-direction: row;
     align-items: flex-start;
     padding: 32px 0px 0px;
-    position: absolute;
     width: 200px;
     height: 120px;
     left: 39vw;
@@ -196,6 +200,10 @@ a{
     /*32px*/
    height: 1.6%;
  }
+ .elem-btn-c{
+  height:56px;
+  width: 72px;
+}
     
 }
 /*versão desktop */
@@ -246,6 +254,13 @@ a{
   .espaco-3{
     /*32px*/
    height: 3%;
+ }
+ .h-espaco-botoes{
+   width: 20px;
+ }
+ .elem-btn-c{
+   height:56px;
+   width: 80px;
  }
     
     
