--- a/assets/css/nivel.css
+++ b/assets/css/nivel.css
@@ -54,10 +54,13 @@
     top:0;
   }
   .logo-eic-modal-centro{
-    padding-left:10px;
+    padding-left: 30px;
   }
-  .menu-lateral-modal{ 
-    
+  .elem-menu-modal{
+    width: 242px;
+    height: 24px;
+  }
+  .menu-lateral-modal{    
     position: absolute;
     width: 100vw;
     height: 100vh;
@@ -139,6 +142,9 @@
     width: 20vw;
     background-color: #541663;
     
+  }
+  .largura-p-modal{
+    width: 160px;
   }
 }
   
