--- a/assets/css/jogo.css
+++ b/assets/css/jogo.css
@@ -1,8 +1,8 @@
 
 /*DESKTOP*/
 #container{
-    width: 40vw;
-    height: 68vh;
+    width: 29vw; /*O tamanho das cartas esta muito pequeno em comparação ao tamanho da tela*/
+    height: 58vh;
     top: 30px;
     left: 50px;
     border: 1px solid #000;
