virar as cartas e fazer o match, precisa mostrar a carta que está atras

--- a/assets/css/jogo.css
+++ b/assets/css/jogo.css
@@ -28,7 +28,7 @@
     backface-visibility: hidden;
 }
 .back{
-    background: url("../img/verso1.png");
+    background: url("../img/fase1/verso1.png");
 }
 .back.flipped{
     transform: rotateY(180deg);
