--- a/assets/css/jogo.css
+++ b/assets/css/jogo.css
@@ -46,6 +46,15 @@
 .face .flipped .match{
     box-shadow: 0 0 10px #0f0;
 }
+#imgMatchSing{
+    position: relative;
+    top: 250px;
+    transition-property: top, opacity;
+    transition-duration: 1.5s;
+    opacity: 1;
+    z-index: -1;
+
+}
 /*MOBILE*/
 @media(max-width: 599px){ 
     .padrao-desktop{
