--- a/assets/css/jogo.css
+++ b/assets/css/jogo.css
@@ -1,24 +1,5 @@
 
-/*DESKTOP*/
-#container{
-    width: 29vw; /*O tamanho das cartas esta muito pequeno em comparação ao tamanho da tela*/
-    height: 58vh;
-    top: 30px;
-    left: 50px;
-    border: 1px solid #000;
-    position: relative;
-    margin: 0 auto;
-    border-radius: 10px;
-}
-.card{
-    width: 120px;
-    height: 120px;
-    position: absolute; /*é importante mas porque?*/
-    border-radius: 10px;
-    /*aqui os cards ficam empilhados, mas preciso distanciar um por um? NAO JAVASCRIPT LINDO*/
-    perspective: 600px;
-    /*profundidade do giro, para nao ficar chapado*/ 
-}
+/*global*/
 .face{
     width: 100%;
     height: 100%;
@@ -55,15 +36,70 @@
     z-index: -1;
 
 }
-/*MOBILE*/
-@media(max-width: 599px){ 
-    .padrao-desktop{
-        display: none;
+/*DESKTOP*/
+@media(min-width: 1001px){
+    #container{
+        width: 29vw; /*O tamanho das cartas esta muito pequeno em comparação ao tamanho da tela*/
+        height: 58vh;
+        top: 24px;
+        left: -4vw;
+       /* border: 1px solid #000;*/
+        position: relative;
+        margin: 0 auto;
+        border-radius: 10px;
+    }
+    .card{
+        width: 120px;
+        height: 120px;
+        position: absolute; /*é importante mas porque?*/
+        border-radius: 10px;
+        /*aqui os cards ficam empilhados, mas preciso distanciar um por um? NAO JAVASCRIPT LINDO*/
+        perspective: 600px;
+        /*profundidade do giro, para nao ficar chapado*/ 
     }
 }
 /*TABLET*/
 @media(min-width: 600px) and (max-width: 1000px){
-    .padrao-desktop{
-        display: none;
+    #container{
+        width: 60vw; /*O tamanho das cartas esta muito pequeno em comparação ao tamanho da tela*/
+        height: 64vh;
+        top: 0px;
+        left: 6vw;
+        /*border: 1px solid #000;*/
+        position: relative;
+        margin: 0 auto;
+        border-radius: 10px;
     }
+    .card{
+        width: 96px;
+        height: 96px;
+        position: absolute; /*é importante mas porque?*/
+        border-radius: 10px;
+        /*aqui os cards ficam empilhados, mas preciso distanciar um por um? NAO JAVASCRIPT LINDO*/
+        perspective: 600px;
+        /*profundidade do giro, para nao ficar chapado*/ 
+    }
+}
+/*MOBILE*/
+@media(max-width: 599px){ 
+    #container{
+        width: 95vw; /*O tamanho das cartas esta muito pequeno em comparação ao tamanho da tela*/
+        height: 58vh;
+        top: 20px;
+        left: 20px;
+       /* border: 1px solid #000; */
+        position: relative;
+        margin: 0 auto;
+        border-radius: 10px;
+    }
+    .card{
+        width: 72px;
+        height: 72px;
+        position: absolute; /*é importante mas porque?*/
+        border-radius: 10px;
+        /*aqui os cards ficam empilhados, mas preciso distanciar um por um? NAO JAVASCRIPT LINDO*/
+        perspective: 600px;
+        /*profundidade do giro, para nao ficar chapado*/ 
+    }
+    
 }
