tentativa de menu mobile ( de novo)

--- a/assets/css/nivel.css
+++ b/assets/css/nivel.css
@@ -59,7 +59,7 @@
   .elem-menu-modal{
     width: 242px;
   }
-  .menu-lateral-modal{    
+ /* oi.{    
     position: absolute;
     width: 100vw;
     height: 100vh;
@@ -68,9 +68,8 @@
     background: #541663;
     padding:16px;
     text-align: left;
-  }
-
-
+  }*/
+  
   .elem-carta{
     height:120px;
     width: 120px;
@@ -133,8 +132,7 @@
     display: none;
   }
   .ULmodal{
-    list-style-type: none;
-    list-style-type: none;
+    list-style: none;
     left: 0%;
     margin: 0;
     padding: 0;
@@ -160,7 +158,6 @@
   }
 
   .subtitulo-2{
-
       text-align: center;
       color: rgb(255,255,255);
       font-size: 38px;
